# token-panda-v2

./: PROGRESS.md  README.md  changelog.html  electron-builder.yml  index.html  onboarding.html  package-lock.json  package.json  preview.html  regression-checklist.md  settings.html  skin-grid.html  usage.html  vite.config.ts
.github/workflows/: release.yml
docs/: index.html
electron/: claudeApi.cjs  claudeApi.test.mjs  claudeCosts.cjs  helpers.cjs  helpers.test.mjs  installer.cjs  installer.test.mjs  main.cjs  preload.cjs  spaces.cjs  store.cjs  telemetry.cjs  telemetry.test.mjs  updater.cjs  updater.test.mjs  usage.cjs  usage.test.mjs
electron/providers/: claude.cjs  codex.cjs  codex.test.mjs  gemini.cjs  gemini.test.mjs  index.cjs  index.test.mjs
scripts/: electron-dev.mjs
src/: App.css  App.tsx  changelog.ts  main.tsx  onboarding-main.tsx  pet-drag.css  petLogic.test.ts  petLogic.ts  preview-main.tsx  settings-main.tsx  skin-grid-main.tsx  skins.test.ts  skins.ts  store.test.ts  store.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: claude_api.rs  lib.rs  login_capture.rs  updater.rs  usage.rs
src/tauri-shim/: bridge.ts  core.ts  event.ts  plugin-notification.ts  plugin-store.ts  window.ts
telemetry-worker/: README.md  package-lock.json  package.json  schema.sql  vitest.config.mjs  worker.test.mjs  wrangler.toml
telemetry-worker/src/: worker.js
