[package]
name = "app"
version = "1.74.1"
description = "Claude Desk Pet"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
# v1.74.1 진단용: release 빌드에서도 WebView 우클릭 inspector 가 열리도록 devtools
# 기본 활성. Windows 흰 화면 실제 원인을 사용자 환경에서 콘솔 한 줄로 확인하기 위함.
# 본 수정이 v1.75 에 들어가 진단이 끝나면 이 feature 는 다시 빼는 게 정상.
tauri = { version = "2.10.3", features = ["macos-private-api", "tray-icon", "image-png", "devtools"] }
tauri-plugin-log = "2"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"
notify = "6"
notify-debouncer-mini = "0.4"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"
dirs = "5"
walkdir = "2"
parking_lot = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

[target."cfg(target_os = \"macos\")".dependencies]
objc2 = "0.5"
libloading = "0.8"
