[package]
name = "app"
version = "1.74.8"
description = "Claude Desk Pet"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
# v1.75: devtools feature 유지. v1.74.1 진단용으로 켰지만 본 수정 후에도
# release 빌드에서 F12 / 우클릭 → Inspect 디버깅 동선을 살려두는 게
# 회귀 잡을 때 매번 빌드를 다운그레이드하지 않아도 돼 비용 효율적. 코드
# 측에서는 spawned 윈도우(open_settings_window / open_onboarding_window)
# 의 builder 가 .devtools(true) 를 명시해 release 에서도 일관 동작.
tauri = { version = "2.10.3", features = ["macos-private-api", "tray-icon", "image-png", "devtools"] }
tauri-plugin-log = "2"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"
notify = "6"
notify-debouncer-mini = "0.4"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"
dirs = "5"
walkdir = "2"
parking_lot = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

[target."cfg(target_os = \"macos\")".dependencies]
objc2 = "0.5"
libloading = "0.8"
